animacion pagina sobre nosotros

--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
     <div class="logo"><img id="logo-slr"src="imagenes/Logo.png" alt=""></div>
     
     <div class="container"> 
-        <div class="nosotros">NOSOTROS</div>
+        <div class="nosotros"><a href="nosotros.html"> NOSOTROS</a></div>
         <div class="contacto">CONTACTO</div>
     </div>
 
